tests/ui/reborrow/custom_marker_coerce_shared_move.stderr
error[E0505]: cannot move out of `a` because it is borrowed
  --> $DIR/custom_marker_coerce_shared_move.rs:19:14
   |
LL |     let a = CustomMarker(PhantomData);
   |         - binding `a` declared here
LL |     let b = method(a);
   |                    - borrow of `a` occurs here
LL |     let c = method(a);
LL |     let _ = (a, b, c);
   |              ^  - borrow later used here
   |              |
   |              move out of `a` occurs here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0505`.
